# sdrppcontroller

./: README.md
Arduino/controller/: controller.ino
Arduino/controller_leonardo/: controller_leonardo.ino
Arduino/controller_uno/: controller_uno.ino
Pico/: main.py
Plugin/misc_modules/arduino_controller/: CMakeLists.txt
Plugin/misc_modules/arduino_controller/src/: main.cpp
